Fix the overlapping buttons

--- a/app/www/style.css
+++ b/app/www/style.css
@@ -90,13 +90,20 @@
     text-align: center;
     font-size: 1.1rem;
     justify-content: center;
+    flex-grow: 3;
 }
 
 .advoc-table {
     margin: 5px; 
     height: 80%;    
     flex-grow: 3;
+    min-height: 35rem;
 }
+
+.advoc-table-container {
+    height: 80%;
+}
+
 .bar-graph {
     margin:5px; 
     flex-grow: 2;
